--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.codepunk.demo">
+
+    <uses-sdk tools:overrideLibrary="
+            android.support.compat,
+            android.support.coreui,
+            android.support.coreutils,
+            android.support.fragment,
+            android.support.graphics.drawable,
+            android.support.mediacompat,
+            android.support.v4,
+            android.support.v7.appcompat" />
 
     <application
         android:allowBackup="true"
