--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile "com.android.support:appcompat-v7:${androidSupportVersion}"
     compile "com.android.support:support-v4:${androidSupportVersion}"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'org.apache.commons:commons-lang3:3.6'
     testCompile 'junit:junit:4.12'
 }
