Broke out into new class to figure out applyPlacement

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,11 @@
             android:label="@string/title_activity_interactive_image_view">
         </activity>
 
+        <activity
+            android:name=".StagingInteractiveImageViewActivity"
+            android:label="@string/title_activity_interactive_image_view">
+        </activity>
+
     </application>
 
 </manifest>
