--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:name=".interactiveimageview.version5.InteractiveImageViewActivity"
             android:label="@string/title_activity_interactive_image_view"></activity>
 
+        <activity
+            android:name=".interactiveimageview.version6.InteractiveImageViewActivity"
+            android:label="@string/title_activity_interactive_image_view"></activity>
+
     </application>
 
 </manifest>
