New version of constrainTransformInfo is working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name=".interactiveimageview.version6.InteractiveImageViewActivity"
             android:label="@string/title_activity_interactive_image_view"></activity>
 
+        <activity
+            android:name=".interactiveimageview.version7.InteractiveImageViewActivity"
+            android:label="@string/title_activity_interactive_image_view"></activity>
+
     </application>
 
 </manifest>
