--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:label="@string/title_activity_interactive_image_view"></activity>
 
         <activity
-            android:name=".interactiveimageview.version7.InteractiveImageViewActivity"
+            android:name=".InteractiveImageViewActivity"
             android:label="@string/title_activity_interactive_image_view"></activity>
 
     </application>
