--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:label="@string/title_activity_interactive_image_view"/>
 
         <activity
-            android:name=".interactiveimageview2.ImageViewInteractinatorActivity"
+            android:name=".ImageViewInteractinatorActivity"
             android:label="@string/title_activity_interactive_image_view"/>
 
     </application>
